Fix sidebar vertical overflow
Fixes: https://github.com/Intelligence-AI/learnjsonschema.com/issues/194

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -74,13 +74,6 @@ $bootstrap-icons-font-dir: "./";
   min-width: 260px;
 }
 
-#sidebar > div {
-  @extend .position-absolute;
-  @extend .top-0;
-  @extend .start-0;
-  @extend .bottom-0;
-}
-
 // Tables with vertical headers collapse the headers by default
 table tr > th[scope="row"] {
   width: 1px;
